syntax = "proto3";

package chat.service;
option go_package = "api";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

service Chat {
   // Connect a connection
   rpc Connect(ConnectReq) returns (Empty) {};
   // Disconnect a connection
   rpc Disconnect(DisconnectReq) returns (Empty) {};
   // Heartbeat a connection
   rpc Heartbeat(HeartbeatReq) returns (Empty) {};
}

message Empty {}

message ConnectReq {
    string uid = 1 [(gogoproto.customname) = "UID"];
    string sid = 2 [(gogoproto.customname) = "SID"];
    string server_id = 3 [(gogoproto.customname) = "ServerID"];
}

message DisconnectReq {
    string uid = 1 [(gogoproto.customname) = "UID"];
    string sid = 2 [(gogoproto.customname) = "SID"];
}

message HeartbeatReq {
    string uid = 1 [(gogoproto.customname) = "UID"];
    string sid = 2 [(gogoproto.customname) = "SID"];
    string server_id = 3 [(gogoproto.customname) = "ServerID"];
}